syntax = "proto3";
option go_package = "github.com/kannon-email/kannon/proto/kannon/admin/apiv1";

package pkg.kannon.admin.apiv1;

import "google/protobuf/timestamp.proto";

service Api {
  rpc GetDomains(GetDomainsReq) returns (GetDomainsResponse) {}
  rpc GetDomain(GetDomainReq) returns (GetDomainRes) {}
  rpc CreateDomain(CreateDomainRequest) returns (Domain) {}

  rpc CreateTemplate(CreateTemplateReq) returns (CreateTemplateRes) {}
  rpc UpdateTemplate(UpdateTemplateReq) returns (UpdateTemplateRes) {}
  rpc DeleteTemplate(DeleteTemplateReq) returns (DeleteTemplateRes) {}
  rpc GetTemplate(GetTemplateReq) returns (GetTemplateRes) {}
  rpc GetTemplates(GetTemplatesReq) returns (GetTemplatesRes) {}

  rpc CreateAPIKey(CreateAPIKeyRequest) returns (CreateAPIKeyResponse) {}
  rpc ListAPIKeys(ListAPIKeysRequest) returns (ListAPIKeysResponse) {}
  rpc GetAPIKey(GetAPIKeyRequest) returns (GetAPIKeyResponse) {}
  rpc DeactivateAPIKey(DeactivateAPIKeyRequest) returns (DeactivateAPIKeyResponse) {}
}

message GetDomainsReq {}

message GetDomainsResponse {
  repeated Domain domains = 1;
}

message GetDomainReq {
  string domain = 1;
}

message GetDomainRes {
  Domain domain = 1;
}

message CreateDomainRequest {
  string domain = 1;
}

message Domain {
  string domain = 1;
  string key = 2;
  string dkim_pub_key = 3;
}

message Template {
  string template_id = 1;
  string html = 2;
  string title = 3;
  string type = 4;
}

message CreateTemplateReq {
  string html = 1;
  string title = 2;
  string domain = 3;
}

message CreateTemplateRes {
  Template template = 1;
}

message UpdateTemplateReq {
  string template_id = 1;
  string html = 2;
  string title = 3;
}

message UpdateTemplateRes {
  Template template = 1;
}

message DeleteTemplateReq {
  string template_id = 1;
}

message DeleteTemplateRes {
  Template template = 1;
}

message GetTemplateReq {
  string template_id = 1;
}

message GetTemplateRes {
  Template template = 1;
}

message GetTemplatesReq {
  string domain = 1;
  uint32 skip = 2;
  uint32 take = 3;
}

message GetTemplatesRes {
  repeated Template templates = 1;
  uint32 total = 2;
}

message APIKey {
  string id = 1;
  string key = 2;
  string name = 3;
  string domain = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp expires_at = 6;
  bool is_active = 7;
  google.protobuf.Timestamp deactivated_at = 8;
}

message CreateAPIKeyRequest {
  string domain = 1;
  string name = 2;
  google.protobuf.Timestamp expires_at = 3;
}

message CreateAPIKeyResponse {
  APIKey api_key = 1;
}

message ListAPIKeysRequest {
  string domain = 1;
  bool only_active = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message ListAPIKeysResponse {
  repeated APIKey api_keys = 1;
}

message GetAPIKeyRequest {
  string domain = 1;
  string id = 2;
}

message GetAPIKeyResponse {
  APIKey api_key = 1;
}

message DeactivateAPIKeyRequest {
  string domain = 1;
  string id = 2;
}

message DeactivateAPIKeyResponse {
  APIKey api_key = 1;
}